dnl Process this file with autoconf to produce a configure script.
AC_INIT(__stack_chk_fail_local.c)
AC_CONFIG_HEADER(config.h)
AC_DEFINE([HAVE_REGCOMP], [], [Description])
dnl Checks for programs.
AC_PROG_CC

dnl AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl Checks for import library.

AC_OUTPUT(Makefile)

